# 3DPuppetry

./: .cproject  .project  .pydevproject  CMakeLists.txt  LICENSE.txt  README  README.md  README~  cmake_install.cmake  create_eclipse_project  mainpage.dox  manifest.xml
.csettings/: 0.1882123333_cdtBuildSystem  0.1882123333_org.eclipse.cdt.core.pathentry  0.1882123333_org.eclipse.cdt.core.settings  0.1882123333_scannerConfiguration
files/: puppetrycolormodel_AKP.txt  puppetrycolormodel_EAC.txt  puppetrycolormodel_LJW.txt  puppetrycolormodel_PG.txt  puppetrycolormodel_robin.txt
include/: CloudTracker.h  GLManager.h  Puppet.h
include/Maths/: MATRIX4X4.h
launch/: SIFT_scanning.launch  SIFT_tester.launch  all_puppets_launch.launch  all_puppets_playback.launch  debayer_params.yaml  kinect_params.yaml  sub_puppets_launch.launch
src/: 3DPuppetry.cpp  CloudTracker.cpp  GLManager.cpp  Puppet.cpp  assembly.cpp
